# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  PUBLISH.md  README.md  SECURITY.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
_deprecated_python/: README.md
_deprecated_python/forge-cu-mcp-python/forge_cu_mcp.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
_deprecated_python/forge-cu-mcp-python/forge_mcp.egg-info/: PKG-INFO  SOURCES.txt
_deprecated_python/forge-sdk-python/: README.md  pyproject.toml
_deprecated_python/forge-sdk-python/forge_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crates/forge-agora/: Cargo.toml
crates/forge-bank/: Cargo.toml
crates/forge-bank/src/: futures.rs  insurance.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: daemon.rs  main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  error.rs
crates/forge-infer/: Cargo.toml
crates/forge-infer/src/: distributed.rs  engine.rs  gguf.rs  lib.rs  llama_engine.rs  rpc_manager.rs  token_stream.rs
crates/forge-ledger/: Cargo.toml
crates/forge-ledger/src/: agentnet.rs  agora.rs  anchor.rs  bitvm.rs  collusion.rs  ledger.rs  lib.rs  metrics.rs  zk.rs
crates/forge-lightning/: Cargo.toml
crates/forge-lightning/src/: payment.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: main.rs  tools.rs
crates/forge-mind/: Cargo.toml
crates/forge-mind/src/: budget.rs  federated.rs  lib.rs
crates/forge-net/: Cargo.toml
crates/forge-net/src/: cluster.rs  connection.rs  discovery.rs  gossip.rs  lib.rs  tcp_tunnel.rs  transport.rs
crates/forge-net/tests/: p2p_connection.rs
crates/forge-node/: Cargo.toml
crates/forge-node/src/: agora_adapter.rs  api.rs  bank_adapter.rs  forward_pipeline.rs  lib.rs  node.rs  pipeline.rs  security_tests.rs
crates/forge-node/src/handlers/: agora.rs  anchor.rs  bank.rs  metrics.rs  mod.rs
crates/forge-proto/: Cargo.toml
crates/forge-proto/src/: messages.rs
crates/forge-sdk/: Cargo.toml
crates/forge-sdk/src/: client.rs  lib.rs  types.rs
crates/forge-shard/: Cargo.toml
crates/tirami-anchor/src/: anchorer.rs
crates/tirami-cli/src/: main.rs
crates/tirami-core/: Cargo.toml
crates/tirami-core/src/: config.rs  crypto.rs  error.rs  lib.rs  types.rs
crates/tirami-infer/src/: distributed.rs
crates/tirami-ledger/src/: collusion.rs  governance.rs  ledger.rs  lib.rs  metrics.rs  peer_registry.rs  referral.rs  staking.rs  tokenomics.rs
crates/tirami-mind/src/: lib.rs  personal_agent.rs
crates/tirami-net/src/: gossip.rs  transport.rs
crates/tirami-node/: Cargo.toml
crates/tirami-node/src/: agent_loop.rs  agora_adapter.rs  api.rs  api_tokens.rs  lib.rs  mind_adapter.rs  node.rs  pipeline.rs  security_tests.rs
crates/tirami-proto/src/: messages.rs
docs/: a2a-payment.md  architecture.md  bootstrap.md  concept.md  constitution.md  developer-guide.md  economy.md  faq.md  hybrid-chain-design.md  mcp-spec.md  migration-guide.md  operator-guide.md  protocol-spec.md  roadmap.md  threat-model.md
docs/security/: known-issues.md
docs/translations/ar/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md
docs/translations/es/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/fa/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/fr/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/he/: README.md  a2a-payment.md  agent-integration.md
docs/translations/hi/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/ja/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  concepts.md  economy.md  getting-started.md  protocol-spec.md  roadmap.md  threat-model.md  what-is-forge.md
docs/translations/ru/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/uk/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/zh-CN/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
docs/translations/zh-TW/: README.md  a2a-payment.md  agent-integration.md  architecture.md  bootstrap.md  concept.md  economy.md  protocol-spec.md  roadmap.md  threat-model.md
examples/: autonomous_agent.py  demo.sh  langchain_forge.py  openclaw_forge.py  seed_agent.py
marketing/: GO-TO-MARKET.md  forge-agent-card.json  framework-pitch.md  system-prompt-template.md
marketing/posts/: devto-article.md  hackernews.md  mcp-submission.md  reddit-localllama.md
mcp/: README.md  forge-mcp-server.py  pyproject.toml
mcp/forge_cu_mcp.egg-info/: SOURCES.txt
scripts/: demo.sh  publish.sh  setup.sh  verify-impl.sh
sdk/python/: PUBLISH-0.3.0.md  README.md  forge_sdk.py  pyproject.toml
sdk/python/tests/: test_phase8.py
