[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for the Forge compute economy: NodeId, CU, Config"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
