[package]
name = "forge-infer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
forge-core = { workspace = true }
llama-cpp-2 = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
